add_library(${LIGHT_YEARS_ENGINE_TARGET_NAME} STATIC

 ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Application.h
 ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Application.cpp

 ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Core.h
 ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Core.cpp

 ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/World.h
 ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/World.cpp

 ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Actor.h
 ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Actor.cpp

 ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Object.h
 ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Object.cpp

 ${CMAKE_CURRENT_SOURCE_DIR}/include/EntryPoint.h
 ${CMAKE_CURRENT_SOURCE_DIR}/src/EntryPoint.cpp

)

target_include_directories(${LIGHT_YEARS_ENGINE_TARGET_NAME} PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR}/include
)

include(FetchContent)

set(SFML_LIB_NAME SFML)

FetchContent_Declare(
	${SFML_LIB_NAME}
	GIT_REPOSITORY https://github.com/SFML/SFML
	GIT_TAG 2.6.1
	GIT_SHALLOW FALSE
)

FetchContent_MakeAvailable(${SFML_LIB_NAME})

target_link_libraries(${LIGHT_YEARS_ENGINE_TARGET_NAME} PUBLIC sfml-graphics)
target_link_libraries(${LIGHT_YEARS_ENGINE_TARGET_NAME} PUBLIC sfml-window)
target_link_libraries(${LIGHT_YEARS_ENGINE_TARGET_NAME} PUBLIC sfml-system)
target_link_libraries(${LIGHT_YEARS_ENGINE_TARGET_NAME} PUBLIC sfml-audio)

